--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { t = enTranslations } = Astro.props;
     <style>
       body {
         font-family: "Manrope", sans-serif;
+background: #000;
         background: #f5f5f7;
       }
       /* global.css veya styles.css dosyanızda */
